--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -2,10 +2,29 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/*/ ////////// Approval Card ////////// */
+.approvalCard{
+  border: 1px solid gray;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 350px;
+  padding: 10px;
+  margin: 10px auto;
+  border-radius: 15px;
+  flex: 1 1 90%;
+  width: 90%;
 }
+.approvalCard__btns {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -15,7 +34,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
